Move storing files to AWS S3

--- a/lib/dobble_generator_web/templates/picture/show.html.eex
+++ b/lib/dobble_generator_web/templates/picture/show.html.eex
@@ -13,7 +13,7 @@
 <%= for {picture, i} <- Enum.with_index(@pictures, 1) do %>
      <li>
     <strong>Card <%= i %>:</strong>
-    <img src="<%= DobbleGeneratorWeb.Router.Helpers.static_path(@conn, picture.image) %>" width="300" />
+    <img src="<%= picture.image %>" width="300" />
   </li>
 <% end %>
 </ul>
